# testwork-gitea

./: .gitignore  README.md  pyproject.toml  requirements.txt
locators/: base.py  create_repo.py  file.py  footer.py  header.py  login.py  main.py  register.py  repo.py
pages/: base_page.py  file_page.py  login_page.py  main_page.py  repo_page.py
tests/: conftest.py
tests/cases/: test_case_1.py
tests/fixtures/: docker_fixtures.py
tests/ui/: test_footer.py  test_header.py
utils/: app_browsers.py  app_funcs.py  app_functions.py  app_types.py
