[tool.poetry]
name = "testwork-gitea"
version = "0.1.0"
description = ""
authors = ["vaniamaksimov <vaniamaksimov@gmail.com>"]
readme = "README.md"
packages = [{include = "testwork_gitea"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.0"
selenium = "^4.10.0"
docker = "^6.1.3"
requests = "^2.31.0"
pytest-xdist = {extras = ["psutil"], version = "^3.3.1"}
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.275"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests",]
filterwarnings = ["ignore:DeprecationWarning",]
norecursedirs = [".venv",]
python_files = ["test_*.py",]
python_functions = ["test_*",]
pythonpath = [".",]
addopts = ["-vv", "-p", "no:cacheprovider", "--tb=long"]
disable_test_id_escaping_and_forfeit_all_rights_to_community_support = "True"
markers = [
    "test_case: Тесты по описанным тест кейсам, в случае провала теста все последующие тесты в классе получат марку xfail с названием упавшего теста",
    "ui: Тесты пользовательского интерфейса",
]

[tool.ruff]
fix = true
src = ["tests"]
select = ["E", "F"]
ignore = []
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".vscode",
]
per-file-ignores = {}
line-length = 100
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py310"

[tool.ruff.mccabe]
max-complexity = 10

[tool.black]
line-length = 100
skip-string-normalization = true